# ripple_bench

./: .gitignore  .gitmodules  9_24_todos.md  README.md  WIKI_RAG_USAGE.md  check_spending.py  clear_steps.md  evaluate_models_on_ripple.sh  evaluate_models_on_ripple.slrm  plane_writing.md  pyproject.toml  run_tests.py  setup_uv_env.sh  simple_wiki_access.py  test_local_wiki_access.py  test_wiki_rag_complete.py
.githooks/: pre-commit
notebooks/: .gitignore  BERT_exploration.ipynb  LEACE_explore.ipynb  LEACE_explore_alex.ipynb  LEACE_implement.ipynb  TOFU_exploration.ipynb  analyze_neighbor_quality.py  analyze_questions_and_topics.py  analyze_questions_and_topics_fixed.py  analyze_ripple_topics.py  bio_neighbor_quality_results_20250923_163443.json  celebA_exploration.ipynb  celeb_model_eval.ipynb  chem_topics_by_distance.txt  clip_splice.ipynb  coco_download.ipynb  coco_exploration.ipynb  concept_unlearning_iterative_ga.ipynb  construct_dual_use_dataset_wmdp.ipynb  counterfactual_plot_viz.ipynb  counterfactual_visualizations.ipynb  create_composed_dataset.ipynb  dual_use_df_bio.json  dual_use_df_bio__question_only.json  evaluate_model_on_ripple_effects.ipynb  evaluate_ripple_effect_on_questions.ipynb  explore_ripple_results.ipynb  headline_figure_generation_aug21.ipynb  headline_figure_generation_sept_11.ipynb  headline_figure_generation_sept_11.py  headline_figure_generation_sept_23.py  healed_images.ipynb  here.json  identify_and_filter_refusals.py  igor_21aug.ipynb  imagenet_exploration.ipynb  individual_topic_headline.ipynb  individual_topic_ripple_effects.ipynb  make_all_plots.sh  misc.ipynb  (+7 more)
ripple_bench/: __init__.py  anthropic_utils.py  config.py  construct_ripple_bench_structure.py  dual_use_facts_utils.py  extract_topics_and_neighbors.py  generate_ripple_questions.py  metrics.py  models.py  openai_utils.py  utils.py
ripple_bench_test/: ripple_bench_dataset_2025-06-30_01-10-00.json
safe_facts/: dual_use_df_bio.json  safe_facts_dual_use_df_bio__question_only__2025-04-14.json  safe_topic_hop_dataset__basic.json  safe_topic_hop_dataset__basic__250.json  safe_topic_hop_dataset__basic__250__2025-05-18.json  wiki_facts__2025-04-17.json  wiki_facts_py__2025-04-17.json
scripts/: .gitignore  analyze_dataset_stats.py  analyze_distance_functions.py  analyze_ripple_results.py  batch_fact_extraction.py  build_ripple_bench_from_wmdp.py  build_ripple_bench_from_wmdp.sh  check_anthropic_spending.py  (+46 more)
(+188 files in other folders)
