[tool.poetry]
name = "data-to-concept-unlearning"
version = "0.1.0"
description = ""
authors = ["Roy Rinberg <royrinberg@gmail.com>"]
readme = "README.md"

packages = [
	{include = "unlearning"},
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = {extras = ["torch"], version = "^4.47.1"}
accelerate = "^1.2.1"
evaluate = "^0.4.3"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
gdown = "^5.2.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
