[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-to-concept-unlearning"
version = "0.1.0"
description = "Characterizing Concept Unlearning"
readme = "README.md"
authors = [
    {name = "Roy Rinberg", email = "royrinberg@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "datasets>=4.0.0",
    "transformers[torch]>=4.47.1",
    "accelerate>=1.2.1",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "requests>=2.32.3",
    "gdown>=5.2.0",
    "seaborn>=0.13.2",
    "tqdm",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "cryptography>=42.0.5",
    "faiss-cpu>=1.7.4",
    "langchain-community>=0.3.23",
    "sentence-transformers>=4.1.0",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["ripple_bench*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=7.0.0",
]